# libusb

./: README.md  build-libusb.sh  build.gradle  settings.gradle.kts
libusb-mx/android/: config.h
libusb-mx/examples/: fxload.c
libusb-mx/libusb/: core.c
libusbcommunication/: CMakeLists.txt  build.gradle  version_script  version_script_libusb
libusbcommunication/src/c/: log.h  usb_fork.c
